<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:contentInsetStart="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_sign_in"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tvGoogle"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_white_with_border_grey"
            android:gravity="center"
            android:text="@string/text_sign_in_google"
            android:textAllCaps="false"
            android:textColor="@color/black_700"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="18dp"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@+id/tvGoogle"
            app:layout_constraintLeft_toLeftOf="@+id/tvGoogle"
            app:layout_constraintTop_toTopOf="@+id/tvGoogle"
            app:srcCompat="@drawable/ic_google" />

        <TextView
            android:id="@+id/tvFb"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_white_with_border_grey"
            android:gravity="center"
            android:text="@string/text_sign_in_fb"
            android:textAllCaps="false"
            android:textColor="@color/black_700"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGoogle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@+id/tvFb"
            app:layout_constraintLeft_toLeftOf="@+id/tvFb"
            app:layout_constraintTop_toTopOf="@+id/tvFb"
            app:srcCompat="@drawable/ic_fb" />

        <View
            android:id="@+id/vLineStart"
            android:layout_width="0dp"
            android:layout_height="0.8dp"
            android:background="@color/black_700"
            app:layout_constraintBottom_toBottomOf="@+id/tvOr"
            app:layout_constraintEnd_toStartOf="@+id/tvOr"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvOr" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_or"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/vLineEnd"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/vLineStart"
            app:layout_constraintTop_toBottomOf="@+id/tvFb" />

        <View
            android:id="@+id/vLineEnd"
            android:layout_width="0dp"
            android:layout_height="0.8dp"
            android:background="@color/black_700"
            app:layout_constraintBottom_toBottomOf="@+id/tvOr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvOr"
            app:layout_constraintTop_toTopOf="@+id/tvOr" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/text_username_email"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/tvOr" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/text_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_forgot_password"
            android:textColor="@color/green"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_login"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

        <Button
            android:id="@+id/btnLoginWithFingerPrint"
            style="@style/ButtonWhiteWithBorderGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_login_finger_print"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="2dp"
            android:text="@string/text_dont_have_account"
            app:layout_constraintEnd_toStartOf="@+id/tvRegister"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginWithFingerPrint" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_register"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginWithFingerPrint" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>